--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "@types/chai": "^4.2.1",
     "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
-    "mocha": "^6.2.0"
+    "mocha": "^6.2.0",
+    "typescript": "^3.6.3"
   },
   "dependencies": {
     "polar-shared-webserver": "^1.32.14",
-    "tsconfig": "^7.0.0",
-    "typescript": "^3.6.2"
+    "tsconfig": "^7.0.0"
   }
 }
